--- a/temporary_pofol/css/style.css
+++ b/temporary_pofol/css/style.css
@@ -28,6 +28,9 @@ h3 {
   font-size: 2rem;
   margin: 20px 0;
 }
+strong {
+  font-weight: bold;
+}
 /* COMMON */
 
 /* HEADER */
@@ -38,9 +41,9 @@ h3 {
 }
 #header nav {}
 #header nav  .nav-btn {
+  display: block;
   float: right;
   margin-top: 50px;
-  display: block;
   border: none;
   background: transparent;
 }
@@ -49,8 +52,29 @@ h3 {
   width: 40px;
   height: 5px;
   background: #FFF;
-  margin: 8px 0;
   border-radius: 3px;
+  transition: transform .4s, width .4s;
+  position: relative;
+  margin: 8.4px auto;
+}
+#header nav  .nav-btn span:nth-child(1) {
+  transform-origin: left center;
+  top: 0;
+}
+#header nav  .nav-btn span:nth-child(2) {}
+#header nav  .nav-btn span:nth-child(3) {
+  transform-origin: bottom left;
+}
+#header nav  .nav-btn.on {}
+#header nav  .nav-btn.on span {}
+#header nav  .nav-btn.on span:nth-child(1) {
+  transform: translateX(6px) rotate(45deg);
+}
+#header nav  .nav-btn.on span:nth-child(2) {
+  width: 0;
+}
+#header nav  .nav-btn.on span:nth-child(3) {
+  transform: translateX(8px) rotate(-45deg);
 }
 /* HEADER */
 
@@ -61,6 +85,38 @@ h3 {
   height: 800px;
   overflow: hidden;
   background: center / cover no-repeat url(../images/background.jpg);
+}
+#main .pop {
+  width: 500px;
+  height: 300px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 999;
+  transform: translate(-50%, -50%);
+  background: #FFF;
+  text-align: center;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+  transition: .3s;
+}
+#main .pop .pop-close {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+  background: transparent;
+  border: none;
+  font-size: 20px;
+}
+#main .pop .pop-txt {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 18px;
+}
+#main .pop .pop-txt p {
+  margin: 18px 0;
+  letter-spacing: -1px;
 }
 #main .container {
   height: 100%;
@@ -83,20 +139,36 @@ h3 {
 #intro h2 {
   color: #342DDF;
 }
-#intro .cont-wrap {}
-#intro .cont-wrap .intro-cont {}
-#intro .cont-wrap .intro-cont .cont-img {
+#intro .swiper-container {}
+#intro .swiper-container .intro-cont {}
+#intro .swiper-container .intro-cont .cont-img {
   height: 300px;
   background: #AAA;
 }
-#intro .cont-wrap .intro-cont .cont-txt {
+#intro .swiper-container .intro-cont .cont-txt {
   text-align: right;
 }
-#intro .cont-wrap .intro-cont .cont-txt h3 {
+#intro .swiper-container .intro-cont .cont-txt h3 {
   color: #342DDF;
   margin: 20px 0;
 }
-#intro .cont-wrap .intro-cont .cont-txt p {}
+#intro .swiper-container .intro-cont .cont-txt p {}
+#intro .swiper-container .slide-btn {
+  top: 40%;
+  color: #342DDF;
+}
+#intro .swiper-container .slide-btn:before {
+  font-family : xeicon;
+  content: "\e930";
+  font-size: 50px;
+  transform: rotate(90deg);
+}
+#intro .swiper-container .slide-btn.swiper-button-prev:before {
+  transform: rotate(270deg);
+}
+#intro .swiper-container .slide-btn:after {
+  content: "";
+}
 /* INTRO */
 
 /* ABOUT ME */
