--- a/temporary_pofol/css/style.css
+++ b/temporary_pofol/css/style.css
@@ -231,8 +231,12 @@ strong {
   margin: 50px 0;
 }
 #pofol .pofol-wrap .pofol-cont.lc .cont-slide .cont-slide-img {
-  height: 200px;
+  /* height: 200px; */
   background: #AAA;
+}
+#pofol .pofol-wrap .pofol-cont.lc .cont-slide .cont-slide-img img {
+  width: 100%;
+  display: block;
 }
 #pofol .pofol-wrap .pofol-cont.lc .pofol-dot span {
   width: 12px;
