--- a/temporary_pofol/css/style.css
+++ b/temporary_pofol/css/style.css
@@ -145,6 +145,13 @@ strong {
   height: 300px;
   background: #AAA;
 }
+#intro .swiper-container .intro-cont:nth-child(1) .cont-img {}
+#intro .swiper-container .intro-cont:nth-child(2) .cont-img {
+  background: center right / cover no-repeat url(../images/intro-tmon.jpg);
+}
+#intro .swiper-container .intro-cont:nth-child(3) .cont-img {
+  background: center / cover no-repeat url(../images/intro-academy.jpg);
+}
 #intro .swiper-container .intro-cont .cont-txt {
   text-align: right;
 }
@@ -183,12 +190,22 @@ strong {
   justify-content: space-between;
 }
 #about .about-wrap .about-cont {
-  flex: 1 1 auto;
+  flex: 1 1 40%;
   height: 300px;
-  background: #AAA;
+  background: #FFF;
+  padding: 20px;
 }
 #about .about-wrap .about-cont:nth-child(2){
   margin: 0 30px;
+}
+#about .about-wrap .about-cont h4 {
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+#about .about-wrap .about-cont p {
+  line-height: 1.5;
 }
 #about .about-wrap .about-cont .cont-img {}
 /* ABOUT ME */
@@ -213,12 +230,31 @@ strong {
   height: 300px;
   background: #AAA;
 }
+#pofol .pofol-wrap .pofol-cont.cd .cont-img {}
+#pofol .pofol-wrap .pofol-cont.sd .cont-img {
+  background: center / cover no-repeat url(../images/study.jpg);
+}
 #pofol .pofol-wrap .pofol-cont .cont-txt {
   width: 50%;
   padding-left: 50px;
 }
 #pofol .pofol-wrap .pofol-cont .cont-txt p {
   margin: 10px 0;
+}
+#pofol .pofol-wrap .pofol-cont .cont-txt a {
+  display: block;
+  width: 8rem;
+  padding: 10px 0;
+  text-align: center;
+  color: #342DDF;
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin: 1rem 0;
+  border: 2px solid #342DDF;
+}
+#pofol .pofol-wrap .pofol-cont .cont-txt a:hover {
+  background: #342DDF;
+  color: #fff;
 }
 #pofol .pofol-wrap .pofol-cont.lc {
   display: block
@@ -320,8 +356,6 @@ strong {
     display: block;
   }
   #about .about-wrap .about-cont {
-    height: 300px;
-    background: #AAA;
     margin: 20px 0;
   }
   #about .about-wrap .about-cont:nth-child(2){
